--- a/_source/net/datacrow/core/resources/DcTooltips.properties
+++ b/_source/net/datacrow/core/resources/DcTooltips.properties
@@ -1,3 +1,4 @@
+tpExportModuleWizard = This wizard can be used to export a custom module and all its related information. This give you the change to share your custom modules with other users of Data Crow.
 tpMassUpdateUseOriginalSettings=Use the original settings as stored in the item. Only items having service information set will be updated.
 tpButtonHeight = Sets the button height. This requires a restart of Data Crow to become effective.
 tpInputFieldHeight = Sets the input field height. This requires a restart of Data Crow to become effective.
