*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -45,7 +45,7 @@ lblGrayscale=Grayscale
 lblRotateRight=Rotate to right
 lblRotateLeft=Rotate to left
 lblHeight=Height
-lblFontAntiAliasing=Font Anti-aliasing
+lblFontRendering=Font Rendering Method
 lblBasedOn = Based on
 lblAddLanguage = Create new Language
 lblDeleteLanguage = Delete a Language
