--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -342,7 +342,7 @@ lblUnique=Sleutel
 sysMusicalbumFieldDiscID=Disc ID
 tpDeleteModuleWizard=Start de wizard om gebruikers modules te verwijderen
 lblEdit=Bewerken
-lblFontAntiAliasing=Anti-aliasing voor Lettertypes
+lblFontRendering=Font Rendering Methode
 sysContainerFieldPictureFront=Afbeelding voorkant
 lblStep=Step
 sysSoftwareFieldSerialKey=Serial Key
