*** empty log message ***

--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -846,7 +846,7 @@ sysMediaFieldAvailable=Beschikbaar
 msgSynchronizerCouldNotSave=De bestands synchronisatie kan %1 niet bijwerken
 msgLoanInformationToday=Item met titel %1 is uitgeleend aan <b>%2</b>. Het item is <b>vandaag</b> uitgeleend. %3
 sysSoftwarepublisherFieldUserInteger2=Gebruikersveld - Numeriek 2
-lblBrowserPath=Browser pad
+lblBrowserPath=Standaard web browser
 msgSelectRowForTransfer=Selecteer eerst een item
 sysImage_stateFieldItem=Item
 0x0016=DSP Solution's DIGIFIX
