--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -400,7 +400,7 @@ lblTechnicalInfo = Technical Information
 lblSelectedItemsOnly = Update selected items only
 lblRenameFilesSelectedItems = Only the selected items
 lblToggleToolbarLabelsAction = Toggle Toolbar Labels
-lblBrowserPath = Browser path
+lblBrowserPath = The Default Web Browser
 lblNewOrUpdate = Transfer to new item tab
 lblCredits = Credits
 lblSystem = System information and tools
