--- a/_source/net/datacrow/core/resources/DcMessages.properties
+++ b/_source/net/datacrow/core/resources/DcMessages.properties
@@ -1,3 +1,5 @@
+msgCannotLaunchURLNoBrowserPath = The URL (%1) could not be opened. Data Crow is unable to find the default browser on your system. This could be fixed by setting the default web browser manually in the settings.
+msgCannotLaunchURL = The URL (%1) could not be opened.
 msgSelectModuleToExport = Select the module which you would like to export
 msgNewVersion = Version %1 of Data Crow has been released. This version can be downloaded from %2. Additional information on this version can be found %3.<br><br>To upgrade first make a backup of your database. Install the latest version of Data Crow and restore the backup you created earlier in the new version. The backup &amp; restore utility is located in the tools menu. <br><br>To uninstall the old version simply delete the installation directory (Data Crow does not write files anywhere else, neither does it rely on the repository or other operating system specific locations). 
 msgVersionCheckOnStartup = Check for new versions on startup.
