*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -88,6 +88,7 @@ lblRenameFilesFor = Rename files for the following items
 lblAllItemsInView = All items currently shown in the view
 lblGoToTheWebApp = Go to the web application
 lblLinkToDetails = Link to details?
+lblLink = link
 lblWidth = Width
 lblWebServerPort = Run on port
 lblWebServerSettings = Web Server settings
