*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcMessages.properties
+++ b/_source/net/datacrow/core/resources/DcMessages.properties
@@ -1,3 +1,4 @@
+msgModuleExportHelp = The module is being exported. The module and the related information will be written to a file in the path you have selected in the previous step. 
 msgCannotLaunchURLNoBrowserPath = The URL (%1) could not be opened. Data Crow is unable to find the default browser on your system. This could be fixed by setting the default web browser manually in the settings.
 msgCannotLaunchURL = The URL (%1) could not be opened.
 msgSelectModuleToExport = Select the module which you would like to export
@@ -265,6 +266,8 @@ msgUnexpectedProblemDuringFileImport = An unexpected problem was encountered whi
 msgSettingsSavedUnapplied = The settings have been saved. They will become active after a restart
 msgNoInput = Please enter a query for execution in the input field
 msgQuestion = Question
+msgModuleExportError = An error occurred during the file export: %1
+msgModuleExportFinished = The export of the module(s) has finished
 msgNoFileSelected = Please select a file
 msgFileCouldNotbeCreated = Only reading is allowed on the selected drive. File could not be created
 msgQueryWasSuccessFull = The update query/select/insert query was successful. No errors occurred. No data was retrieved
