--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,3 +1,6 @@
+msgModuleExportError = Er is een fout opgetreden tijdens de export van de module: %1
+msgModuleExportFinished = De export van de module(s) is afgerond
+msgModuleExportHelp = De module wordt geëxporteerd. De module en al haar gerelateerde informatie wordt weggeschreven naar een bestand in het door u aangegeven pad
 lblLink = link
 lblSummary = Samenvatting
 sysUserFieldName=Naam
