*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcMessages.properties
+++ b/_source/net/datacrow/core/resources/DcMessages.properties
@@ -1,3 +1,4 @@
+msgExportedModule = Module %1 has been exported
 msgModuleExportHelp = The module is being exported. The module and the related information will be written to a file in the path you have selected in the previous step. 
 msgCannotLaunchURLNoBrowserPath = The URL (%1) could not be opened. Data Crow is unable to find the default browser on your system. This could be fixed by setting the default web browser manually in the settings.
 msgCannotLaunchURL = The URL (%1) could not be opened.
