*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -1,4 +1,5 @@
-lblModuleExportWizard = Export Module Wizard 
+lblModuleExportWizard = Export Module Wizard
+lblModuleImportWizard = Import Module Wizard 
 lblSummary = Summary
 lblRetrieveFeatureListing = Retrieve Amazon feature listing information
 lblServerSettings = Server Specific Settings
