--- a/_source/net/datacrow/core/resources/DcMessages.properties
+++ b/_source/net/datacrow/core/resources/DcMessages.properties
@@ -1,3 +1,4 @@
+msgModuleImportHelp = Imports the module and the related information. A restart is required for the module(s) to become active.
 msgExportedModule = Module %1 has been exported
 msgModuleExportHelp = The module is being exported. The module and the related information will be written to a file in the path you have selected in the previous step. 
 msgCannotLaunchURLNoBrowserPath = The URL (%1) could not be opened. Data Crow is unable to find the default browser on your system. This could be fixed by setting the default web browser manually in the settings.
@@ -207,6 +208,8 @@ msgInvalidExtension = The file '%1' has an invalid extension
 msgReportNoItems = There are no items which can be added to the report. Perform a search first
 msgNewItemWizard = New %1 Wizard - step %2 of %3
 msgModuleWizard = Module Wizard - step %1 of %2
+msgExportModuleWizard = Export Module Wizard - step %1 of %2
+msgImportModuleWizard = Export Module Wizard - step %1 of %2
 msgInternetSearch = This step uses the online search. Enter the keywords and press enter to start a search. If no result is found you can either change the keywords or cancel the wizard in case your item simply can't be found. Please note you can also select a different server.
 msgEditDetails = In this screen you can easily edit one item. Edit the fields you want to fill or change. Make sure all required fields contain data (the red labeled fields).
 msqMemoryError = Too less memory available to load the items
