--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,3 +1,9 @@
+tpExportModuleWizard = Deze wizard kan worden gebruikt om een zelfgemaakte module te exporteren. Dit geeft u de kans om uw eigen modules te delen met andere gebruikers.  
+tpImportModuleWizard = Met deze wizard kan een module ZIP bestand worden geimporteerd.
+msgModuleImportHelp = Importeert de module en alle gerelateerde informatie. Nadat Data Crow opnieuw is gestart worden de nieuwe modules geactiveerd.
+lblModuleImportWizard = Module Import Wizard
+lblModuleExportWizard = Module Export Wizard
+msgExportedModule = Module %1 is geëxporteerd
 msgModuleExportError = Er is een fout opgetreden tijdens de export van de module: %1
 msgModuleExportFinished = De export van de module(s) is afgerond
 msgModuleExportHelp = De module wordt geëxporteerd. De module en al haar gerelateerde informatie wordt weggeschreven naar een bestand in het door u aangegeven pad
@@ -270,6 +276,8 @@ msgEditDetails=In dit scherm kunt u het item verder bewerken. Vul in ieder geval
 sysImage_categoryFieldIcon=Icoon
 lblUndoGrouping=Groepering ongedaan maken
 msgModuleWizard=Module Wizard - stap %1 van %2
+msgExportModuleWizard=Export Module Wizard - stap %1 van %2
+msgImportModuleWizard=Import Module Wizard - stap %1 van %2
 sysBindingFieldItem=Item
 lblDiscXofX=disc %1 of %2
 msgPleaseEnterUsername=Vul de gebruikersnaam
