*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcMessages.properties
+++ b/_source/net/datacrow/core/resources/DcMessages.properties
@@ -270,7 +270,7 @@ msgUnexpectedProblemDuringFileImport = An unexpected problem was encountered whi
 msgSettingsSavedUnapplied = The settings have been saved. They will become active after a restart
 msgNoInput = Please enter a query for execution in the input field
 msgQuestion = Question
-msgModuleExportError = An error occurred during the file export: %1
+msgModuleExportError = An error occurred during the module export: %1
 msgModuleExportFinished = The export of the module(s) has finished
 msgNoFileSelected = Please select a file
 msgFileCouldNotbeCreated = Only reading is allowed on the selected drive. File could not be created
