*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -1,6 +1,11 @@
+lblExportModuleItemsMain = Export the items of the main module
+lblExportModuleItemsSub = Export the items of the related modules
+lblExportRelatedModules = Export related modules (such as property modules)
+lblExportModulePath = Export path. Location where the export file will be placed
 lblModuleExportWizard = Export Module Wizard
 lblModuleImportWizard = Import Module Wizard 
 lblSummary = Summary
+lblModuleImportFile = Module import file (ZIP)
 lblRetrieveFeatureListing = Retrieve Amazon feature listing information
 lblServerSettings = Server Specific Settings
 lblRetrieveEditorialReviews = Retrieve editorial reviews
