--- a/_source/net/datacrow/core/resources/DcMessages.properties
+++ b/_source/net/datacrow/core/resources/DcMessages.properties
@@ -1,3 +1,8 @@
+msgModuleIsNewCreatingItems = Module is new. The items will be loaded after a restart, during the startup
+msgModuleExistsMergingItems = Module exists, items will be merged
+msgProcessingItemsForX = Processing items for %1
+msgImportModuleConfigurationHelp = Select the module file which will be imported into Data Crow.
+msgExportConfigurationHelp = The export module wizard can be configured to export related modules. Additionally you can indicate if the items of the module(s) should be exported as well. The path is used to store the exported module zip file and is mandatory.
 msgModuleImportHelp = Imports the module and the related information. A restart is required for the module(s) to become active.
 msgExportedModule = Module %1 has been exported
 msgModuleExportHelp = The module is being exported. The module and the related information will be written to a file in the path you have selected in the previous step. 
@@ -228,6 +233,7 @@ msgFileNotAvailable = The file is not available for writing
 msgErrorWhileOpeningX = An error occurred while opening the file %1: %2
 msgCouldNotOpenReport = Could not open the report. Either the report is empty or no report has been selected
 msgProcessingFileX = Processing %1
+msgProcessingModuleItems = Starting to process module items (and images)
 msgJobRunning = Please wait for the previous action to be finished (or cancel the current action)
 msgStoppedSearch = The search has been canceled
 msgParsingSuccessfull = Successfully parsed result [%1]
