--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,3 +1,14 @@
+msgModuleExistsMergingItems = Module is reeds aanwezig, items zullen worden gemerged
+msgModuleIsNewCreatingItems = Module is nieuw. De items zullen worden geladen tijdens een herstart
+msgProcessingItemsForX = Verwerken items van %1
+msgProcessingModuleItems = De items, behorend bij de module, worden verwerkt
+lblModuleImportFile = Module import bestand (ZIP)
+msgImportModuleConfigurationHelp = Selecteer hier het te importeren module bestand. 
+lblExportModuleItemsMain = Exporteer de items van de hoofd module
+lblExportModuleItemsSub = Exporteer de items van de gerelateerde module
+lblExportRelatedModules = Exporteer de gerelateerde modules
+lblExportModulePath = Export pad. Hier wordt het export bestand opgeslagen
+msgExportConfigurationHelp = De module export wizard kan worden geconfigureerd zodat ook de gerelateerde modules worden geëporteerd. Daarnaast kunt u aangeven of u de items van de module(s) wilt exporteren. Het export bestand wordt weggeschreven in het geselecteerde pad.
 tpExportModuleWizard = Deze wizard kan worden gebruikt om een zelfgemaakte module te exporteren. Dit geeft u de kans om uw eigen modules te delen met andere gebruikers.  
 tpImportModuleWizard = Met deze wizard kan een module ZIP bestand worden geimporteerd.
 msgModuleImportHelp = Importeert de module en alle gerelateerde informatie. Nadat Data Crow opnieuw is gestart worden de nieuwe modules geactiveerd.
