*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcMessages.properties
+++ b/_source/net/datacrow/core/resources/DcMessages.properties
@@ -1,3 +1,7 @@
+msgSavingImagesTo = Saving images to %1
+msgSavingImage = Saving Image %1
+msgItemExistsMerged = Item %1 exists. Information will be merged.
+msgItemNoExistsCreated = Item %1 does not exist. Item will be created.
 msgModuleIsNewCreatingItems = Module is new. The items will be loaded after a restart, during the startup
 msgModuleExistsMergingItems = Module exists, items will be merged
 msgProcessingItemsForX = Processing items for %1
@@ -214,7 +218,7 @@ msgReportNoItems = There are no items which can be added to the report. Perform 
 msgNewItemWizard = New %1 Wizard - step %2 of %3
 msgModuleWizard = Module Wizard - step %1 of %2
 msgExportModuleWizard = Export Module Wizard - step %1 of %2
-msgImportModuleWizard = Export Module Wizard - step %1 of %2
+msgImportModuleWizard = Import Module Wizard - step %1 of %2
 msgInternetSearch = This step uses the online search. Enter the keywords and press enter to start a search. If no result is found you can either change the keywords or cancel the wizard in case your item simply can't be found. Please note you can also select a different server.
 msgEditDetails = In this screen you can easily edit one item. Edit the fields you want to fill or change. Make sure all required fields contain data (the red labeled fields).
 msqMemoryError = Too less memory available to load the items
@@ -277,7 +281,9 @@ msgSettingsSavedUnapplied = The settings have been saved. They will become activ
 msgNoInput = Please enter a query for execution in the input field
 msgQuestion = Question
 msgModuleExportError = An error occurred during the module export: %1
+msgModuleImportError = An error occurred during the module import: %1
 msgModuleExportFinished = The export of the module(s) has finished
+msgModuleImportFinished = The import of the module(s) has finished. Please restart Data Crow.
 msgNoFileSelected = Please select a file
 msgFileCouldNotbeCreated = Only reading is allowed on the selected drive. File could not be created
 msgQueryWasSuccessFull = The update query/select/insert query was successful. No errors occurred. No data was retrieved
