--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,6 +1,11 @@
+msgSavingImagesTo = Plaatjes worden opgeslagen in %1
+msgSavingImage = Plaatje %1 wordt opgeslagen
+msgItemExistsMerged = Item %1 bestaat reeds. Gegevens worden gemerged.
+msgItemNoExistsCreated = Item %1 bestaat niet. Het item wordt aangemaakt.
 msgModuleExistsMergingItems = Module is reeds aanwezig, items zullen worden gemerged
 msgModuleIsNewCreatingItems = Module is nieuw. De items zullen worden geladen tijdens een herstart
 msgProcessingItemsForX = Verwerken items van %1
+msgModuleImportFinished = Het importeren van de module(s) is beeindigd. Ik adviseer u Data Crow opnieuw op te starten.
 msgProcessingModuleItems = De items, behorend bij de module, worden verwerkt
 lblModuleImportFile = Module import bestand (ZIP)
 msgImportModuleConfigurationHelp = Selecteer hier het te importeren module bestand. 
@@ -15,7 +20,8 @@ msgModuleImportHelp = Importeert de module en alle gerelateerde informatie. Nada
 lblModuleImportWizard = Module Import Wizard
 lblModuleExportWizard = Module Export Wizard
 msgExportedModule = Module %1 is geëxporteerd
-msgModuleExportError = Er is een fout opgetreden tijdens de export van de module: %1
+msgModuleImportError = Er is een fout opgetreden tijdens de import van de module(s): %1
+msgModuleExportError = Er is een fout opgetreden tijdens de export van de module(s): %1
 msgModuleExportFinished = De export van de module(s) is afgerond
 msgModuleExportHelp = De module wordt geëxporteerd. De module en al haar gerelateerde informatie wordt weggeschreven naar een bestand in het door u aangegeven pad
 lblLink = link
