--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,3 +1,6 @@
+tpCopyModuleWizard = Met deze wizard kan een module worden gemaakt die is gebaseerd op een bestaande module.
+lblModuleCopyWizard = Module Kopiëren Wizard
+msgSelectModuleToCopy = Selecteer de module die u wilt gebruiken als template voor het maken van een nieuwe module.
 msgSavingImagesTo = Plaatjes worden opgeslagen in %1
 msgSavingImage = Plaatje %1 wordt opgeslagen
 msgItemExistsMerged = Item %1 bestaat reeds. Gegevens worden gemerged.
