--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -1,3 +1,5 @@
+lblFlatView = Flat View
+lblHierarchicalView = Hierarchical View  
 lblModuleCopyWizard = Copy Module Wizard
 lblExportModuleItemsMain = Export the items of the main module
 lblExportModuleItemsSub = Export the items of the related modules
