*** empty log message ***

--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,3 +1,4 @@
+msgCannotSetItemAsParent = Item kan niet de ouder zijn van zichzelf!
 lblFlatView = Simpele Weergave
 lblHierarchicalView = Gelaagde Weergave  
 tpCopyModuleWizard = Met deze wizard kan een module worden gemaakt die is gebaseerd op een bestaande module.
