*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcMessages.properties
+++ b/_source/net/datacrow/core/resources/DcMessages.properties
@@ -1,3 +1,4 @@
+msgCreatingDefaultData = Creating default module items 
 msgCannotSetItemAsParent = The selected parent cannot be used: Item cannot be its own parent.
 msgSelectModuleToCopy = Select the module which you would like to use as a template for the new module.
 msgSavingImagesTo = Saving images to %1
