--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,3 +1,4 @@
+msgCreatingDefaultData = Standaard items worden aangemaakt
 msgCannotSetItemAsParent = Item kan niet de ouder zijn van zichzelf!
 lblFlatView = Simpele Weergave
 lblHierarchicalView = Gelaagde Weergave  
