*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -1,3 +1,7 @@
+lblClearField = Clear Field Value
+lblDeleteFile = Delete File
+lblMoveFile = Move File
+lblLocateFile = Locate File
 lblFlatView = Flat View
 lblHierarchicalView = Hierarchical View  
 lblModuleCopyWizard = Copy Module Wizard
