--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,3 +1,8 @@
+lblClearField = Veld leegmaken
+lblDeleteFile = Bestand verwijderen
+lblMoveFile = Bestand verplaatsen
+lblLocateFile = Bestand localiseren
+msgSelectnewLocation = Selecteer de directorie waar het bestand naar verplaatst moet worden
 msgCreatingDefaultData = Standaard items worden aangemaakt
 msgCannotSetItemAsParent = Item kan niet de ouder zijn van zichzelf!
 lblFlatView = Simpele Weergave
