*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -1,7 +1,7 @@
 lblClearField = Clear Field Value
 lblDeleteFile = Delete File
 lblMoveFile = Move File
-lblLocateFile = Locate File
+lblLocateFile = Locate File (%1)
 lblFlatView = Flat View
 lblHierarchicalView = Hierarchical View  
 lblModuleCopyWizard = Copy Module Wizard
@@ -159,7 +159,7 @@ lblDriveManager = Drive Manager
 lblFileSynzhronizer = File Synchronizer
 lblDrivePoller = Drive Poller
 lblDriveScanner = Drive Scanner
-lblMatchOnHashAndSize = Match on Hash and Filesize (recommended)
+lblMatchOnHashAndSize = Match on Hash and Filesize
 lblMatchOnFilename = Match only on Filename 
 lblMatchOnFilenameAndSize = Match on Filesize and Filename  
 lblUndoGrouping = Undo Grouping
