--- a/_source/net/datacrow/core/resources/DcMessages.properties
+++ b/_source/net/datacrow/core/resources/DcMessages.properties
@@ -1,3 +1,5 @@
+msgLocatingFile = Locating File %1..
+msgDrivesNotScanned = The drives have not yet been scanned. Data Crow needs to perform a scan on your drives before it can try and locate individual files. Do you want to open the Drive Manager now?
 msgSelectnewLocation = Select the directory where the file should be moved to 
 msgCreatingDefaultData = Creating default module items 
 msgCannotSetItemAsParent = The selected parent cannot be used: Item cannot be its own parent.
