--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,3 +1,5 @@
+msgLocatingFile = Bestand %1 wordt gezocht.. 
+msgDrivesNotScanned = De schijfstations zijn nog niet gescand. Data Crow moet eerst alle schijfstations scannen voordat individuele bestanden kunnen worden gelocaliseerd. Wilt u de Drive Manager nu openen?
 lblClearField = Veld leegmaken
 lblDeleteFile = Bestand verwijderen
 lblMoveFile = Bestand verplaatsen
@@ -487,7 +489,7 @@ sysContainerItem=Container
 0x0400=BTV Digital
 sysSoftwareFieldUserInteger1=Gebruikersveld - Numeriek 1
 lblAddNew=Items toevoegen
-lblOpenFromClipboard=Add from Memory
+lblOpenFromClipboard=Toevoegen vanuit geheugen
 0x0067=DSAT Display
 sysContainer_containertypeItemPlural=Container Types
 msgEnterReturnDate=Vul de retourdatum in
@@ -828,7 +830,7 @@ sysActorFieldName=Naam
 lblModuleRelateWizard=Module Relateer Wizard
 msgClosingDb=Bezig met het afsluiten van de database
 lblUrlField=URL Veld
-lblSortOn=Sort on
+lblSortOn=Sorteer op
 msgMemory64MB=Data Crow heeft weinig geheugen toegeweze gekregen (%1 MB). Dit kan Data Crow erg traag maken. U kunt Data Crow meer geheugen toewijzen door Data Crow als volgt op te starten: java -Xmx256m -jar datacrow.jar
 0x0030=Dolby AC2
 sysMovieFieldFilename=Bestandsnaam
