*** empty log message ***

--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -3,7 +3,7 @@ msgDrivesNotScanned = De schijfstations zijn nog niet gescand. Data Crow moet ee
 lblClearField = Veld leegmaken
 lblDeleteFile = Bestand verwijderen
 lblMoveFile = Bestand verplaatsen
-lblLocateFile = Bestand localiseren
+lblLocateFile = Bestand localiseren (%1)
 msgSelectnewLocation = Selecteer de directorie waar het bestand naar verplaatst moet worden
 msgCreatingDefaultData = Standaard items worden aangemaakt
 msgCannotSetItemAsParent = Item kan niet de ouder zijn van zichzelf!
