*** empty log message ***

--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1662,7 +1662,7 @@ lblOldPassword=Oud wachtwoord
 sysAuthor=Auteurs
 msgAllItemsLoanInformation=%1 items worden bijgewerkt. Alle items zijn op dit moment uitgeleend en kunnen worden geretourneerd.
 sysImageFieldDaysLoaned=Dagen uitgeleend
-lblUsername=Username
+lblUsername=Gebruikersnaam
 sysDirector_externalreferenceFieldexternalid=Externe ID
 sysMusicartistFieldserviceurl=Service URL
 tip11=Door rechts te klikken op een veld wordt het bewerken menu geopend. Via dit menu kunt u, onder andere, acties ongedaan maken, tekst kopieren en tekst invoegen.
@@ -1707,7 +1707,7 @@ lblMenuSave=Opslaan
 sysMediaFieldUserLongText1=Gebruikersveld - Text lang
 sysMusictrackFieldAlbumID=Album ID
 sysDirectorFieldUserInteger2=Gebruikersveld - Numeriek 2
-tpAddNew=Add the selected search result to the new item tab
+tpAddNew=Voegt het geselecteerde item toe aan de nieuwe items tab
 lblReportFormat=Rapport formaat
 sysUserFieldCity=Stad
 sysSuperFieldLabel=Label
@@ -1741,7 +1741,7 @@ msgEditDetails=In dit scherm kunt u het item verder bewerken. Vul in ieder geval
 sysMusicalbum_externalreferenceFieldLabel=Label
 sysDirector_externalreferenceFieldexternalidtype=Type
 sysMediaFieldLabel=Label
-lblAlignment=Alignment
+lblAlignment=Uitlijning
 sysTabItem=Tab
 lblRewriteAll=Alle titels herschrijven
 lblCredits=Credits
@@ -1751,7 +1751,7 @@ sysDirector_externalreferenceFieldID=ID
 msgSelectFields=Selecteer velden
 sysActorItem=Acteur
 lblModuleImportWizard=Module Import Wizard
-lblNewPassword=New password
+lblNewPassword=Nieuw wachtwoord
 sysAudiotrackFieldModified=Aangepast op
 sysMovie_storagemediumFieldCreated=Aangemaakt op
 sysMovieFieldwebpage=Webpagina
@@ -1776,7 +1776,7 @@ msgConnectingToServer=Bezig met verbinding maken naar %1
 lblFileStructure=Bestandsstructuur
 sysMusictrack_stateFieldName=Naam
 msgModuleImportHelp=Importeert de module en alle gerelateerde informatie. Nadat Data Crow opnieuw is gestart worden de nieuwe modules geactiveerd.
-sysAudiocdFieldLanguages=Languages
+sysAudiocdFieldLanguages=Talen
 sysPersonFieldDescription=Omschrijving
 sysGenreMapping=Genre Mapping
 0x0203=Creative FastSpeech10
@@ -1788,7 +1788,7 @@ sysBook_categoryFieldModified=Aangepast op
 lblBackupAndRestore=Backup & Restore
 lblLanguage=Taal
 lblApplyFilter=Filter Opnieuw
-lblEncoding=Encoding
+lblEncoding=Codering
 sysBindingFieldCreated=Aangemaakt op
 msgNoPatternEntered=Er is geen pattern gedefinieerd!
 tpHsqlCacheScale=From the HSQL Documentation: Indicates the maximum number of rows of cached tables that are held in memory, calculated as 3 *(2**value) (three multiplied by (two to the power value)). The default results in up to 3*16384 rows from all cached tables being held in memory at any time.
@@ -1817,7 +1817,7 @@ sysSoftwareFieldservice=Service
 sysMusictrackFieldCountries=Landen
 lblFileRenamePreview=Bestandshernoeming Preview
 lblViewRights=Lees rechten
-lblMaxLength=Max. Length
+lblMaxLength=Max. Lengte
 sysSoftwareFieldModified=Aangepast op
 msgErrorOpeningHelp=De helpbestanden zijn niet gevonden. De help kan niet worden getoond
 sysSoftware_externalreferenceFieldLabel=Label
@@ -1849,7 +1849,7 @@ sysImageFieldCompression=Compressie (Bits)
 sysSoftwareFieldPictureBack=Afbeelding Achterkant
 sysImage_categoryFieldIcon=Icoon
 msgRestart=Data Crow moet worden herstart om de veranderingen definitief te maken. Wilt u Data Crow nu afsluiten?
-lblFileTreeSystem=System
+lblFileTreeSystem=Systeem
 sysMusicalbum_stateFieldCreated=Aangemaakt op
 lblMinutes=Minuten
 msgErrorWhileExecuting=Er is een fou opgetreden bij het uitvoeren van: %1
@@ -1994,8 +1994,8 @@ sysCategory=Category
 msgModuleNameNotUnique=De item naam is niet uniek. Deze module bestaat reeds. Verander de item naam en probeer het nogmaals.
 sysSoftware_platformFieldName=Naam
 sysCountryFieldItem=Item
-msgReadingFrom=Busy reading from %1
-lblDueDate=Due Date
+msgReadingFrom=Bezig met het lezen van %1
+lblDueDate=Overschrijdingsdatum
 sysAudiocdItem=Audio CD
 lblExportModulePath=Export pad. Hier wordt het export bestand opgeslagen
 msgCancelExitAndSave=Er zijn veranderingen gemaakt die nog niet zijn opgeslagen. Weet u zeker dat u Data Crow wilt afsluiten?
