*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcMessages.properties
+++ b/_source/net/datacrow/core/resources/DcMessages.properties
@@ -12,7 +12,7 @@ msgModuleIsNewCreatingItems = Module is new. The items will be loaded after a re
 msgModuleExistsMergingItems = Module exists, items will be merged
 msgProcessingItemsForX = Processing items for %1
 msgImportModuleConfigurationHelp = Select the module file which will be imported into Data Crow.
-msgExportConfigurationHelp = The export module wizard can be configured to export related modules. Additionally you can indicate if the items of the module(s) should be exported as well. The path is used to store the exported module zip file and is mandatory.
+msgExportConfigurationHelp = The export module wizard exports the main module and all its related modules. You can indicate if the items of the modules should be exported as well. The path is used to store the exported module zip file and is mandatory.
 msgModuleImportHelp = Imports the module and the related information. A restart is required for the module(s) to become active.
 msgExportedModule = Module %1 has been exported
 msgModuleExportHelp = The module is being exported. The module and the related information will be written to a file in the path you have selected in the previous step. 
