--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -278,7 +278,7 @@ lblPersonOrderByFirstname=Sorteer op voornaam
 sysPermissionFieldModified=Aangepast op
 sysMovie_genreFieldIcon=Icoon
 msqMemoryError=Te weinig geheugen beschikbaar om alle items te laden.
-msgExportConfigurationHelp=De module export wizard kan worden geconfigureerd zodat ook de gerelateerde modules worden geëporteerd. Daarnaast kunt u aangeven of u de items van de module(s) wilt exporteren. Het export bestand wordt weggeschreven in het geselecteerde pad.
+msgExportConfigurationHelp=De module export wizard exporteert de hoofd module en al haar gerelateerde modules. U kunt hier aangeven of u ook de items van de modules wilt exporteren. Het export bestand wordt weggeschreven in het geselecteerde pad.
 msgScanningDriveX=Er wordt een scan gestart for schijf %1
 sysImage_externalreferenceFieldItem=Item
 sysPerson_categoryItem=Categorie
