--- a/homepage/version.properties
+++ b/homepage/version.properties
@@ -1,5 +1,5 @@
-version = 3.5.1
-comment = small maintenance release
+version = 3.6
+comment = major release
 download_url = http://www.datacrow.net/download.html
 information_url = http://www.datacrow.net/news.html
 type = p
