*** empty log message ***

--- a/homepage/version.properties
+++ b/homepage/version.properties
@@ -2,4 +2,4 @@ version = 3.7
 comment = major release
 download_url = http://www.datacrow.net/download.html
 information_url = http://www.datacrow.net/news.html
-type = b
+type = p
