*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -1,3 +1,4 @@
+lblRetrieveCriticReviews = Retrieve all critic reviews
 lblClearField = Clear Field Value
 lblDeleteFile = Delete File
 lblMoveFile = Move File
