--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,3 +1,4 @@
+lblRunOnStartup = Uitvoeren tijdens het opstarten van Data Crow
 lblRetrieveCriticReviews=Haal alle 'critic reviews' op
 sysDeveloperFieldUserInteger2=Gebruikersveld - Numeriek 2
 msgNotSaved=Niet alle veranderingen zijn opgeslagen. Wilt u deze nu opslaan?
