*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcMessages.properties
+++ b/_source/net/datacrow/core/resources/DcMessages.properties
@@ -1,3 +1,5 @@
+msgFieldNameNotAllowed = The entered field name is not allowed as it is a reserved keyword.
+msgObjectNameNotAllowed = The entered object name is not allowed as it is a reserved keyword.
 msgLocatingFile = Locating File %1..
 msgDrivesNotScanned = The drives have not yet been scanned. Data Crow needs to perform a scan on your drives before it can try and locate individual files. Do you want to open the Drive Manager now?
 msgSelectnewLocation = Select the directory where the file should be moved to 
