--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,3 +1,5 @@
+msgFieldNameNotAllowed = De opgegeven veldnaam is niet toegestaan (gereserveerd sleutelwoord).
+msgObjectNameNotAllowed = De opgegeven item naam is niet toegestaan (gereserveerd sleutelwoord).
 lblRunOnStartup = Uitvoeren tijdens het opstarten van Data Crow
 lblRetrieveCriticReviews=Haal alle 'critic reviews' op
 sysDeveloperFieldUserInteger2=Gebruikersveld - Numeriek 2
