*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcMessages.properties
+++ b/_source/net/datacrow/core/resources/DcMessages.properties
@@ -1,3 +1,4 @@
+msgCannotDeleteDueToReferences = Item cannot be deleted. The following items reference this item: %1 
 msgFieldNameNotAllowed = The entered field name is not allowed as it is a reserved keyword.
 msgObjectNameNotAllowed = The entered object name is not allowed as it is a reserved keyword.
 msgLocatingFile = Locating File %1..
