*** empty log message ***

--- a/reports/software/pdf/software_details_black&white.properties
+++ b/reports/software/pdf/software_details_black&white.properties
@@ -1,8 +1,9 @@
 #
-#Thu Dec 04 10:13:29 CET 2008
+#Tue Nov 10 21:17:47 CET 2009
 image_height=0
 report_name=Detail Report (black&white)
 max_text_length=1000
 image_width=0
 scale_images=false
 copy_images=false
+allowrelativeimagespaths=false
