--- a/reports/software/pdf/software_details_desert.properties
+++ b/reports/software/pdf/software_details_desert.properties
@@ -1,8 +1,9 @@
 #
-#Fri Oct 19 22:05:56 CEST 2007
+#Tue Nov 10 21:18:30 CET 2009
 image_height=0
 report_name=Detail Report (desert)
-image_width=0
 max_text_length=1000
+image_width=0
 scale_images=false
 copy_images=false
+allowrelativeimagespaths=false
