--- a/reports/software/pdf/software_listing_desert.properties
+++ b/reports/software/pdf/software_listing_desert.properties
@@ -1,8 +1,9 @@
 #
-#Thu Dec 04 10:13:35 CET 2008
+#Tue Nov 10 21:19:02 CET 2009
 image_height=0
 report_name=List Report (desert)
-image_width=0
 max_text_length=1000
+image_width=0
 scale_images=false
 copy_images=false
+allowrelativeimagespaths=false
