*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -1,3 +1,5 @@
+lblContainerManaged = Items can be assigned to a container. Adds a container field to this module.
+lblFileBacked = Items represent actual files. Adds additional file fields to this module. 
 lblRunOnStartup = Run on startup
 lblRetrieveCriticReviews = Retrieve all critic reviews
 lblClearField = Clear Field Value
