--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,3 +1,5 @@
+lblContainerManaged = Items kunnen een container toegewezen krijgen. Voegt een container veld toe aan deze module. 
+lblFileBacked = Items representeren bestanden. Voegt bestand informatie velden toe. 
 msgFieldNameNotAllowed = De opgegeven veldnaam is niet toegestaan (gereserveerd sleutelwoord).
 msgObjectNameNotAllowed = De opgegeven item naam is niet toegestaan (gereserveerd sleutelwoord).
 lblRunOnStartup = Uitvoeren tijdens het opstarten van Data Crow
