--- a/homepage/version.properties
+++ b/homepage/version.properties
@@ -1,5 +1,5 @@
-version = 3.8.1
-comment = major release
+version = 3.8.2
+comment = minor release
 download_url = http://www.datacrow.net/download.html
 information_url = http://www.datacrow.net/news.html
 type = p
