*** empty log message ***

--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,3 +1,4 @@
+msgCannotSetItemAsParentLoop = De geselecteerde ouder container kan niet worden gebruikt; deze maak al deel uit van de hierarchie.
 lblContainerManaged = Items kunnen een container toegewezen krijgen. Voegt een container veld toe aan deze module. 
 lblFileBacked = Items representeren bestanden. Voegt bestand informatie velden toe. 
 msgFieldNameNotAllowed = De opgegeven veldnaam is niet toegestaan (gereserveerd sleutelwoord).
