*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -217,7 +217,7 @@ lblStartsWith = Starts with
 lblEndsWith = Ends With
 lblLessThen = Less Then
 lblGreaterThen = Greater Then
-lblReadFileInfo = Attach File Info
+lblReadFileInfo = Read file information
 lblSelected = Selected
 lblAvailable = Available
 lblPie = Pie
