*** empty log message ***

--- a/log4j.properties
+++ b/log4j.properties
@@ -1,5 +1,5 @@
 #
-#Sat Jul 25 22:20:57 CEST 2009
+#Thu Dec 03 18:31:40 CET 2009
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.logfile.File=/D\:/Development/projects/datacrow/data/data_crow.log
 log4j.rootLogger=info, textpane, logfile
