--- a/modules/musicalbum.properties
+++ b/modules/musicalbum.properties
@@ -1,21 +1,22 @@
 #
-#Sun Sep 13 12:42:05 CEST 2009
+#Wed Dec 09 15:56:54 CET 2009
 online_search_field_settings_dialog_size=600/450
+file_import_online_service_region=
 online_search_default_server=Amazon
 import_local_art_back_keywords=back
 enabled=true
 import_local_art_media_keywords=cd,dvd,media
-card_view_picture_order=6\#7\#5\#
+card_view_picture_order=5\#7\#6\#
 online_search_query_full_details_initially=false
 import_local_art_front_keywords=front,cover,case
 table_view_settings_dialog_size=500/400
+import_cd_storagemedium=
 online_search_default_mode=Keyword
-field_definitions={150/&/null/&/true/&/true/&/true/&/false/&/Summary}{151/&/null/&/true/&/false/&/false/&/false/&/Summary}{152/&/null/&/true/&/false/&/false/&/false/&/Summary}{154/&/null/&/true/&/false/&/false/&/false/&/Summary}{2/&/null/&/true/&/false/&/false/&/false/&/Summary}{8/&/null/&/true/&/false/&/false/&/false/&/lblTechnicalInfo}{206/&/null/&/true/&/false/&/false/&/false/&/lblTechnicalInfo}{205/&/null/&/true/&/false/&/false/&/false/&/lblTechnicalInfo}{207/&/null/&/true/&/false/&/false/&/false/&/lblTechnicalInfo}{208/&/null/&/true/&/false/&/false/&/false/&/lblTechnicalInfo}{10/&/null/&/true/&/false/&/false/&/false/&/Information}{155/&/null/&/true/&/false/&/false/&/false/&/Information}{11/&/null/&/true/&/false/&/false/&/false/&/Information}{217/&/null/&/true/&/false/&/false/&/false/&/Information}{153/&/null/&/true/&/false/&/false/&/false/&/Information}{213/&/null/&/true/&/false/&/false/&/false/&/Information}{9/&/null/&/true/&/false/&/false/&/false/&/Information}{1/&/null/&/true/&/false/&/false/&/false/&/Information}{4/&/null/&/true/&/false/&/false/&/false/&/Information}{3/&/null/&/true/&/false/&/false/&/false/&/Information}{216/&/null/&/true/&/false/&/false/&/false/&/null}{215/&/null/&/true/&/false/&/false/&/false/&/null}{214/&/null/&/false/&/false/&/false/&/false/&/null}{0/&/null/&/false/&/false/&/false/&/false/&/null}{7/&/null/&/true/&/false/&/false/&/false/&/null}{6/&/null/&/true/&/false/&/false/&/false/&/null}{203/&/null/&/true/&/false/&/false/&/false/&/null}{204/&/null/&/true/&/false/&/false/&/false/&/null}{5/&/null/&/true/&/false/&/false/&/false/&/null}{104/&/null/&/false/&/false/&/false/&/false/&/null}{102/&/null/&/false/&/false/&/false/&/false/&/null}{105/&/null/&/false/&/false/&/false/&/false/&/null}{101/&/null/&/false/&/false/&/false/&/false/&/null}{103/&/null/&/false/&/false/&/false/&/false/&/null}{201/&/null/&/true/&/false/&/false/&/false/&/null}{202/&/null/&/true/&/false/&/false/&/false/&/null}
+field_definitions={218/&/null/&/true/&/false/&/false/&/false/&/lblTechnicalInfo}{150/&/null/&/true/&/true/&/true/&/false/&/Samenvatting}{151/&/null/&/true/&/false/&/false/&/false/&/Samenvatting}{152/&/null/&/true/&/false/&/false/&/false/&/Samenvatting}{154/&/null/&/true/&/false/&/false/&/false/&/Samenvatting}{2/&/null/&/true/&/false/&/false/&/false/&/Samenvatting}{206/&/null/&/true/&/false/&/false/&/false/&/lblTechnicalInfo}{205/&/null/&/true/&/false/&/false/&/false/&/lblTechnicalInfo}{207/&/null/&/true/&/false/&/false/&/false/&/lblTechnicalInfo}{208/&/null/&/true/&/false/&/false/&/false/&/lblTechnicalInfo}{155/&/null/&/true/&/false/&/false/&/false/&/Informatie}{11/&/null/&/true/&/false/&/false/&/false/&/Informatie}{217/&/null/&/true/&/false/&/false/&/false/&/Informatie}{153/&/null/&/true/&/false/&/false/&/false/&/Informatie}{213/&/null/&/true/&/false/&/false/&/false/&/Informatie}{9/&/null/&/true/&/false/&/false/&/false/&/Informatie}{1/&/null/&/true/&/false/&/false/&/false/&/Informatie}{4/&/null/&/true/&/false/&/false/&/false/&/Informatie}{3/&/null/&/true/&/false/&/false/&/false/&/Informatie}{216/&/null/&/true/&/false/&/false/&/false/&/null}{215/&/null/&/true/&/false/&/false/&/false/&/null}{214/&/null/&/false/&/false/&/false/&/false/&/null}{0/&/null/&/false/&/false/&/false/&/false/&/null}{7/&/null/&/true/&/false/&/false/&/false/&/null}{6/&/null/&/true/&/false/&/false/&/false/&/null}{203/&/null/&/true/&/false/&/false/&/false/&/null}{204/&/null/&/true/&/false/&/false/&/false/&/null}{5/&/null/&/true/&/false/&/false/&/false/&/null}{104/&/null/&/false/&/false/&/false/&/false/&/null}{102/&/null/&/false/&/false/&/false/&/false/&/null}{105/&/null/&/false/&/false/&/false/&/false/&/null}{101/&/null/&/false/&/false/&/false/&/false/&/null}{103/&/null/&/false/&/false/&/false/&/false/&/null}{201/&/null/&/true/&/false/&/false/&/false/&/null}{202/&/null/&/true/&/false/&/false/&/false/&/null}
 group_by=1\#150\#
 card_view_item_description=
 table_column_order=150\#1\#2\#152\#154\#
 online_search_default_region=us
-auto_create_subitems=true
 mass_update_use_original_service_settings=false
 loan_form_size=500/500
 web_field_settings_dialog_size=504/534
@@ -23,26 +24,31 @@ search_order=Artist\#Title\#
 title_cleanup_regex=
 item_form_size=572/634
 title_cleanup=axxo,dvdrip,cdrip,dvd-rip,cd-rip
-online_search_field_overwrite_settings=102\#206\#151\#9\#10\#11\#202\#215\#153\#105\#6\#4\#103\#155\#2\#208\#217\#101\#205\#201\#5\#150\#214\#8\#154\#203\#207\#216\#104\#204\#7\#3\#1\#213\#152\#
+online_search_field_overwrite_settings=102\#206\#151\#9\#11\#202\#215\#153\#105\#6\#4\#103\#155\#2\#208\#217\#101\#205\#201\#5\#150\#214\#154\#203\#207\#216\#104\#204\#7\#3\#1\#213\#152\#
+file_import_online_service_mode=
 online_search_overwrite=true
 file_import_dialog_size=550/800
 field_settings_dialog_size=504/534
 quick_view_settings_dialog_size=479/527
 file_import_file_types=mp3\#ogg\#mp4\#mp4a\#m4p\#flac\#flc\#ape\#asf\#wav\#mpc\#ra\#wma\#
+file_import_use_online_service=true
 auto_add_perfect_match=false
-quick_view_field_definitions={202/&/false/&/Horizontal/&/0}{213/&/false/&/Horizontal/&/0}{155/&/false/&/Horizontal/&/0}{204/&/true/&/Horizontal/&/0}{216/&/true/&/Horizontal/&/0}{215/&/false/&/Horizontal/&/0}{11/&/true/&/Horizontal/&/0}{0/&/false/&/Horizontal/&/0}{217/&/false/&/Horizontal/&/0}{214/&/true/&/Horizontal/&/0}{153/&/false/&/Horizontal/&/0}{203/&/false/&/Horizontal/&/0}{207/&/true/&/Horizontal/&/0}{208/&/true/&/Horizontal/&/0}{4/&/false/&/Horizontal/&/0}{101/&/true/&/Horizontal/&/0}{104/&/true/&/Horizontal/&/0}{105/&/true/&/Horizontal/&/0}{102/&/true/&/Horizontal/&/0}{103/&/true/&/Horizontal/&/0}{9/&/true/&/Horizontal/&/0}{10/&/true/&/Horizontal/&/0}{150/&/true/&/Horizontal/&/0}{1/&/true/&/Horizontal/&/0}{151/&/true/&/Vertical/&/0}{8/&/false/&/Horizontal/&/0}{7/&/true/&/Horizontal/&/0}{6/&/true/&/Horizontal/&/0}{206/&/true/&/Horizontal/&/0}{152/&/true/&/Horizontal/&/0}{154/&/true/&/Horizontal/&/0}{3/&/true/&/Horizontal/&/0}{205/&/false/&/Horizontal/&/0}{2/&/true/&/Horizontal/&/0}{5/&/true/&/Horizontal/&/0}{201/&/false/&/Horizontal/&/0}
+quick_view_field_definitions={218/&/false/&/Horizontaal/&/0}{202/&/false/&/Horizontal/&/0}{213/&/false/&/Horizontal/&/0}{155/&/false/&/Horizontal/&/0}{204/&/true/&/Horizontal/&/0}{216/&/true/&/Horizontal/&/0}{215/&/false/&/Horizontal/&/0}{11/&/true/&/Horizontal/&/0}{0/&/false/&/Horizontal/&/0}{217/&/false/&/Horizontal/&/0}{214/&/true/&/Horizontal/&/0}{153/&/false/&/Horizontal/&/0}{203/&/false/&/Horizontal/&/0}{207/&/true/&/Horizontal/&/0}{208/&/true/&/Horizontal/&/0}{4/&/false/&/Horizontal/&/0}{101/&/true/&/Horizontal/&/0}{104/&/true/&/Horizontal/&/0}{105/&/true/&/Horizontal/&/0}{102/&/true/&/Horizontal/&/0}{103/&/true/&/Horizontal/&/0}{9/&/true/&/Horizontal/&/0}{150/&/true/&/Horizontal/&/0}{1/&/true/&/Horizontal/&/0}{151/&/true/&/Vertical/&/0}{7/&/true/&/Horizontal/&/0}{6/&/true/&/Horizontal/&/0}{206/&/true/&/Horizontal/&/0}{152/&/true/&/Horizontal/&/0}{154/&/true/&/Horizontal/&/0}{3/&/true/&/Horizontal/&/0}{205/&/false/&/Horizontal/&/0}{2/&/true/&/Horizontal/&/0}{5/&/true/&/Horizontal/&/0}{201/&/false/&/Horizontal/&/0}
+import_cd_container=
 card_view_settings_dialog_size=500/400
+file_import_directory_usage=0
 Simple_Item_Form_Size=450/550
 online_search_retrieved_fields=102\#206\#151\#9\#10\#11\#202\#215\#153\#105\#6\#4\#103\#155\#2\#208\#217\#101\#205\#201\#5\#150\#214\#8\#154\#203\#207\#216\#104\#204\#7\#3\#1\#213\#152\#
 online_search_form_size=704/612
 import_local_art_recurses=true
 import_local_art=true
 import_cd_dialog_size=598/658
-web_field_definitions={10/&/100/&/0/&/true/&/false/&/false}{155/&/100/&/0/&/false/&/false/&/false}{11/&/100/&/0/&/true/&/false/&/false}{217/&/100/&/0/&/false/&/false/&/false}{153/&/100/&/0/&/false/&/false/&/false}{150/&/100/&/0/&/true/&/true/&/true}{151/&/400/&/500/&/true/&/false/&/true}{202/&/100/&/0/&/false/&/false/&/false}{204/&/100/&/0/&/false/&/false/&/false}{216/&/100/&/0/&/false/&/false/&/false}{215/&/100/&/0/&/false/&/false/&/false}{203/&/100/&/0/&/false/&/false/&/false}{1/&/100/&/0/&/false/&/false/&/false}{213/&/100/&/0/&/false/&/false/&/false}{205/&/100/&/0/&/false/&/false/&/false}{8/&/100/&/0/&/false/&/false/&/false}{2/&/100/&/0/&/false/&/false/&/false}{0/&/100/&/0/&/false/&/false/&/false}{201/&/100/&/0/&/false/&/false/&/false}{214/&/100/&/0/&/false/&/false/&/false}{206/&/100/&/0/&/false/&/false/&/false}{6/&/100/&/0/&/false/&/false/&/false}{7/&/100/&/0/&/false/&/false/&/false}{154/&/100/&/0/&/true/&/false/&/true}{5/&/100/&/0/&/true/&/false/&/false}{207/&/100/&/0/&/false/&/false/&/false}{208/&/100/&/0/&/false/&/false/&/false}{3/&/100/&/0/&/false/&/false/&/false}{4/&/100/&/0/&/false/&/false/&/false}{101/&/100/&/0/&/false/&/false/&/false}{104/&/100/&/0/&/false/&/false/&/false}{105/&/100/&/0/&/false/&/false/&/false}{102/&/100/&/0/&/false/&/false/&/false}{103/&/100/&/0/&/false/&/false/&/false}{9/&/100/&/0/&/false/&/false/&/false}{152/&/100/&/0/&/false/&/false/&/true}
+web_field_definitions={218/&/100/&/0/&/false/&/false/&/false}{155/&/100/&/0/&/false/&/false/&/false}{11/&/100/&/0/&/true/&/false/&/false}{217/&/100/&/0/&/false/&/false/&/false}{153/&/100/&/0/&/false/&/false/&/false}{150/&/100/&/0/&/true/&/true/&/true}{151/&/400/&/500/&/true/&/false/&/true}{202/&/100/&/0/&/false/&/false/&/false}{204/&/100/&/0/&/false/&/false/&/false}{216/&/100/&/0/&/false/&/false/&/false}{215/&/100/&/0/&/false/&/false/&/false}{203/&/100/&/0/&/false/&/false/&/false}{1/&/100/&/0/&/false/&/false/&/false}{213/&/100/&/0/&/false/&/false/&/false}{205/&/100/&/0/&/false/&/false/&/false}{2/&/100/&/0/&/false/&/false/&/false}{0/&/100/&/0/&/false/&/false/&/false}{201/&/100/&/0/&/false/&/false/&/false}{214/&/100/&/0/&/false/&/false/&/false}{206/&/100/&/0/&/false/&/false/&/false}{6/&/100/&/0/&/false/&/false/&/false}{7/&/100/&/0/&/false/&/false/&/false}{154/&/100/&/0/&/true/&/false/&/true}{5/&/100/&/0/&/true/&/false/&/false}{207/&/100/&/0/&/false/&/false/&/false}{208/&/100/&/0/&/false/&/false/&/false}{3/&/100/&/0/&/false/&/false/&/false}{4/&/100/&/0/&/false/&/false/&/false}{101/&/100/&/0/&/false/&/false/&/false}{104/&/100/&/0/&/false/&/false/&/false}{105/&/100/&/0/&/false/&/false/&/false}{102/&/100/&/0/&/false/&/false/&/false}{103/&/100/&/0/&/false/&/false/&/false}{9/&/100/&/0/&/false/&/false/&/false}{152/&/100/&/0/&/false/&/false/&/true}
 filter_dialog_size=700/400
+file_import_online_service=
 default_view=1
 quick_filter_default_field=150
 simple_item_view_size=450/550
-table_settings=[52]{215,75}{151,75}{8,75}{214,75}{207,75}{104,75}{150,51}{213,75}{208,75}{7,75}{105,75}{9,75}{201,75}{6,75}{1,51}{206,75}{216,75}{152,51}{4,75}{203,75}{11,75}{154,73}{3,75}{103,75}{155,75}{204,75}{2,51}{205,75}{102,75}{10,75}{153,75}{202,75}{217,75}{5,75}{101,75}{0,75}
+table_settings=[52]{0,75}{205,75}{204,75}{1,75}{2,75}{207,75}{206,75}{3,75}{201,75}{4,75}{5,75}{6,75}{203,75}{202,75}{7,75}{8,75}{9,75}{10,75}{11,75}{152,75}{153,75}{154,75}{155,75}{216,75}{217,75}{218,75}{213,75}{214,75}{215,75}{208,75}{150,75}{151,75}{102,75}{103,75}{101,75}{104,75}{105,75}
 online_search_ub_items=false
 synchronizer_dialog_size=640/663
