*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -28,7 +28,7 @@ lblExporter=Exporter
 lblTableRowHeight=Table Row Height
 lblTreeNodeHeight=Tree Node Height
 lblFileTreeSystem=System
-lblMassUpdateUseOriginalSettings=Use original service settings
+lblMassUpdateUseOriginalSettings=Use original service settings (stored per item)
 lblRegexPattern=Apply the following regex pattern
 lblRemoveWords=Remove the following words
 lblCanBeRemoved=Can be removed?
