--- a/_source/net/datacrow/core/resources/DcMessages.properties
+++ b/_source/net/datacrow/core/resources/DcMessages.properties
@@ -1,3 +1,4 @@
+msgAddDrive = Add a new drive
 msgCannotSetItemAsParentLoop = The selected parent is already used in the hierarchy for this item.
 msgCannotDeleteDueToReferences = Item cannot be deleted. The following items reference this item: %1 
 msgFieldNameNotAllowed = The entered field name is not allowed as it is a reserved keyword.
