--- a/_source/net/datacrow/core/resources/DcTooltips.properties
+++ b/_source/net/datacrow/core/resources/DcTooltips.properties
@@ -1,3 +1,4 @@
+tpAddDrive = Add a new drive by creating a mapping to an existing location.
 tpCopyModuleWizard = With this wizard you can create a new module based on an existing one.
 tpExportModuleWizard = This wizard can be used to export a custom module and all its related information. This give you the change to share your custom modules with other users of Data Crow.
 tpImportModuleWizard = This wizard can be used to import a module zip file.
