--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,3 +1,5 @@
+msgAddDrive = Voeg een schijfstation toe
+lblMassUpdateUseOriginalSettings = Gebruik de orginele online service zoals vastgelegd per item.
 lblSaveDirectly = Sla items direct op
 msgCannotSetItemAsParentLoop = De geselecteerde ouder container kan niet worden gebruikt; deze maak al deel uit van de hierarchie.
 lblContainerManaged = Items kunnen een container toegewezen krijgen. Voegt een container veld toe aan deze module. 
@@ -933,7 +935,6 @@ sysBook_storagemediumFieldModified=Aangepast op
 msgQuestion=Vraag
 sysMusicartist_externalreferenceFieldLabel=Label
 msgLoanInformationDue=Het item moet op %1 worden geretourneerd
-lblMassUpdateUseOriginalSettings=Use original service settings
 lblCut=Knippen
 sysEditiontypeFieldModified=Aangepast op
 lblReport=Rapport
