*** empty log message ***

--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,3 +1,4 @@
+msgMatchFound = Er was een resultaat gevonden voor '%1'. Item '%2' is bijgewerkt.
 msgAddDrive = Voeg een schijfstation toe
 lblMassUpdateUseOriginalSettings = Gebruik de orginele online service zoals vastgelegd per item.
 lblSaveDirectly = Sla items direct op
