--- a/_source/net/datacrow/core/resources/DcMessages.properties
+++ b/_source/net/datacrow/core/resources/DcMessages.properties
@@ -1,3 +1,4 @@
+msgMatchFound = A match was found for '%1'. Item '%2' has been updated.
 msgAddDrive = Add a new drive
 msgCannotSetItemAsParentLoop = The selected parent is already used in the hierarchy for this item.
 msgCannotDeleteDueToReferences = Item cannot be deleted. The following items reference this item: %1 
